feat(app): testing and eidted
